--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "@hirotask/extra-utils",
-  "version": "1.0.0",
-  "description": "This is extra utilities for Typescript.",
-  "main": "index.js",
-  "repository": "https://github.com/hirotask/extra-utils",
-  "scripts": {
-    "format": "prettier --write ./src",
-    "lint": "eslint src",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky"
-  },
-  "keywords": [
-    "utils"
-  ],
-  "author": "hirotask",
-  "license": "MIT",
-  "devDependencies": {
-    "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-conventional": "^19.8.0",
-    "@eslint/js": "^9.22.0",
-    "@types/eslint": "^9.6.1",
-    "eslint": "^9.22.0",
-    "eslint-config-prettier": "^10.1.1",
-    "globals": "^16.0.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.5.0",
-    "prettier": "^3.5.3",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.1"
-  }
+    "name": "@hirotask/extra-utils",
+    "version": "1.0.0",
+    "description": "This is extra utilities for Typescript.",
+    "main": "index.js",
+    "repository": "https://github.com/hirotask/extra-utils",
+    "scripts": {
+        "format": "eslint --fix './{bin,lib,src,tests}/**/*.{ts,tsx}' && prettier --write './{bin,lib,src,tests}/**/*.{ts,tsx}'",
+        "lint": "eslint './{bin,lib,src,tests}/**/*.{ts,tsx}' --max-warnings=0 && prettier --check './{bin,lib,src,tests}/**/*.{ts,tsx}'",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "prepare": "husky"
+    },
+    "keywords": [
+        "utils"
+    ],
+    "author": "hirotask",
+    "license": "MIT",
+    "devDependencies": {
+        "@commitlint/cli": "^19.8.0",
+        "@commitlint/config-conventional": "^19.8.0",
+        "@eslint/js": "^9.22.0",
+        "@types/eslint": "^9.6.1",
+        "eslint": "^9.22.0",
+        "eslint-config-prettier": "^10.1.1",
+        "globals": "^16.0.0",
+        "husky": "^9.1.7",
+        "lint-staged": "^15.5.0",
+        "prettier": "^3.5.3",
+        "typescript": "^5.8.2",
+        "typescript-eslint": "^8.26.1"
+    }
 }
