--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "name": "@hirotask/extra-utils",
-    "version": "1.0.0",
+    "version": "0.1.0",
     "description": "This is extra utilities for Typescript.",
     "main": "index.js",
     "repository": "https://github.com/hirotask/extra-utils",
     "scripts": {
         "format": "eslint --fix './{bin,lib,src,tests}/**/*.{ts,tsx}' && prettier --write './{bin,lib,src,tests}/**/*.{ts,tsx}'",
         "lint": "eslint './{bin,lib,src,tests}/**/*.{ts,tsx}' --max-warnings=0 && prettier --check './{bin,lib,src,tests}/**/*.{ts,tsx}'",
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "NODE_OPTIONS=--experimental-vm-modules jest ./src",
+        "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest ./src --watch",
         "prepare": "husky"
     },
     "keywords": [
@@ -20,12 +21,16 @@
         "@commitlint/config-conventional": "^19.8.0",
         "@eslint/js": "^9.22.0",
         "@types/eslint": "^9.6.1",
+        "@types/jest": "^29.5.14",
+        "esbuild-jest": "^0.5.0",
         "eslint": "^9.22.0",
         "eslint-config-prettier": "^10.1.1",
         "globals": "^16.0.0",
         "husky": "^9.1.7",
+        "jest": "^29.7.0",
         "lint-staged": "^15.5.0",
         "prettier": "^3.5.3",
+        "ts-jest-resolver": "^2.0.1",
         "typescript": "^5.8.2",
         "typescript-eslint": "^8.26.1"
     }
