--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "main": "index.js",
     "repository": "https://github.com/hirotask/extra-utils",
     "scripts": {
+        "build": "pnpm build:cjs && pnpm build:esm",
+        "build:cjs": "tsc -p tsconfig.cjs.json",
+        "build:esm": "tsc -p tsconfig.esm.json",
         "format": "eslint --fix './{bin,lib,src,tests}/**/*.{ts,tsx}' && prettier --write './{bin,lib,src,tests}/**/*.{ts,tsx}'",
         "lint": "eslint './{bin,lib,src,tests}/**/*.{ts,tsx}' --max-warnings=0 && prettier --check './{bin,lib,src,tests}/**/*.{ts,tsx}'",
         "test": "NODE_OPTIONS=--experimental-vm-modules jest ./src",
