--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "name": "@hirotask/extra-utils",
     "version": "0.1.0",
     "description": "This is extra utilities for Typescript.",
-    "main": "index.js",
+    "main": "./dist/cjs/index.js",
+    "module": "./dist/esm/index.js",
+    "types": "./dist/esm/index.d.js",
     "repository": "https://github.com/hirotask/extra-utils",
     "scripts": {
         "build": "pnpm build:cjs && pnpm build:esm",
