--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "build:cjs": "tsc -p tsconfig.cjs.json",
         "build:esm": "tsc -p tsconfig.esm.json",
         "format": "eslint --fix './{bin,lib,src,tests}/**/*.{ts,tsx}' && prettier --write './{bin,lib,src,tests}/**/*.{ts,tsx}'",
-        "lint": "eslint './{bin,lib,src,tests}/**/*.{ts,tsx}' --max-warnings=0 && prettier --check './{bin,lib,src,tests}/**/*.{ts,tsx}'",
+        "lint": "eslint './{bin,lib,src,tests}/**/*.{ts,tsx}' && prettier --check './{bin,lib,src,tests}/**/*.{ts,tsx}'",
         "test": "NODE_OPTIONS=--experimental-vm-modules jest ./src",
         "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest ./src --watch",
         "prepare": "husky"
