--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "@hirotask/extra-utils",
+    "private": false,
     "version": "0.1.1",
     "description": "This is extra utilities for Typescript.",
     "main": "./dist/cjs/index.js",
@@ -38,5 +39,9 @@
         "ts-jest-resolver": "^2.0.1",
         "typescript": "^5.8.2",
         "typescript-eslint": "^8.26.1"
+    },
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://npm.pkg.github.com/"
     }
 }
